--- a/work/planAhead/1D_version_1/1D_version_1.runs/impl_1/.constrs/io_shield.ucf
+++ b/work/planAhead/1D_version_1/1D_version_1.runs/impl_1/.constrs/io_shield.ucf
@@ -36,11 +36,11 @@ NET "io_led[16]" LOC = P15;
 NET "io_led[16]" IOSTANDARD = LVTTL;
 NET "io_led[17]" LOC = P16;
 NET "io_led[17]" IOSTANDARD = LVTTL;
-NET "io_led[18]" LOC = P17;
+NET "io_led<18>" LOC = P17 | IOSTANDARD = LVTTL;
 NET "io_led[18]" IOSTANDARD = LVTTL;
 NET "io_led[19]" LOC = P21;
 NET "io_led[19]" IOSTANDARD = LVTTL;
-NET "io_led[20]" LOC = P22;
+NET "io_led<20>" LOC = P22 | IOSTANDARD = LVTTL;
 NET "io_led[20]" IOSTANDARD = LVTTL;
 NET "io_led[21]" LOC = P23;
 NET "io_led[21]" IOSTANDARD = LVTTL;
