--- a/constraint/custom.ucf
+++ b/constraint/custom.ucf
@@ -26,4 +26,4 @@ NET "game_reset"    LOC = P17 | IOSTANDARD = LVTTL;
 
 
 NET "led_strip"    LOC=P40 | IOSTANDARD = LVTTL;
-NET "led_strip_1"    LOC=P34 | IOSTANDARD = LVTTL;
+NET "led_strip_1"    LOC=P34 | IOSTANDARD = LVTTL;      // with black mark
