--- a/work/planAhead/1D_version_1/1D_version_1.srcs/constrs_1/imports/emrys/mojo/1D_version_1/constraint/custom.ucf
+++ b/work/planAhead/1D_version_1/1D_version_1.srcs/constrs_1/imports/emrys/mojo/1D_version_1/constraint/custom.ucf
@@ -5,7 +5,17 @@ NET "button4"  LOC = P33 | IOSTANDARD = LVTTL;
 NET "button5"  LOC = P30 | IOSTANDARD = LVTTL;
 NET "button6"  LOC = P27 | IOSTANDARD = LVTTL;
 NET "button0"  LOC = P24 | IOSTANDARD = LVTTL;
-NET "button_reset"    LOC = P22 | IOSTANDARD = LVTTL;
+
+
+
+
+
+
+
+
+
+NET "level_reset"    LOC = P22 | IOSTANDARD = LVTTL;
+NET "game_reset"    LOC = P17 | IOSTANDARD = LVTTL;
 
 
 
@@ -16,4 +26,4 @@ NET "button_reset"    LOC = P22 | IOSTANDARD = LVTTL;
 
 
 NET "led_strip"    LOC=P40 | IOSTANDARD = LVTTL;
-NET "led_strip_1"    LOC=P34 | IOSTANDARD = LVTTL;
+NET "led_strip_1"    LOC=P34 | IOSTANDARD = LVTTL;      // with black mark
