1st attempt for changing last level color

--- a/work/planAhead/1D_version_1/1D_version_1.runs/impl_1/.constrs/custom.ucf
+++ b/work/planAhead/1D_version_1/1D_version_1.runs/impl_1/.constrs/custom.ucf
@@ -1,17 +1,10 @@
-NET "button1" IOSTANDARD = LVTTL;
-INST "button1_0_IBUF" LOC = P51;
-NET "button2" IOSTANDARD = LVTTL;
-INST "button2_0_IBUF" LOC = P41;
-NET "button3" IOSTANDARD = LVTTL;
-INST "button3_0_IBUF" LOC = P35;
-NET "button4" IOSTANDARD = LVTTL;
-INST "button4_0_IBUF" LOC = P33;
-NET "button5" IOSTANDARD = LVTTL;
-INST "button5_0_IBUF" LOC = P30;
-NET "button6" IOSTANDARD = LVTTL;
-INST "button6_0_IBUF" LOC = P27;
-NET "button0" IOSTANDARD = LVTTL;
-INST "button0_0_IBUF" LOC = P24;
+NET "button1"  LOC = P51 | IOSTANDARD = LVTTL;
+NET "button2"  LOC = P41 | IOSTANDARD = LVTTL;
+NET "button3"  LOC = P35 | IOSTANDARD = LVTTL;
+NET "button4"  LOC = P33 | IOSTANDARD = LVTTL;
+NET "button5"  LOC = P30 | IOSTANDARD = LVTTL;
+NET "button6"  LOC = P27 | IOSTANDARD = LVTTL;
+NET "button0"  LOC = P24 | IOSTANDARD = LVTTL;
 
 
 
