--- a/work/planAhead/1D_version_1/1D_version_1.runs/impl_1/.constrs/io_shield.ucf
+++ b/work/planAhead/1D_version_1/1D_version_1.runs/impl_1/.constrs/io_shield.ucf
@@ -92,77 +92,29 @@ NET "io_button[4]" LOC = P138;
 NET "io_button[4]" IOSTANDARD = LVTTL;
 NET "io_button[4]" PULLDOWN;
 
-NET "io_dip[23]" LOC = P57;
-NET "io_dip[23]" IOSTANDARD = LVTTL;
-NET "io_dip[23]" PULLDOWN;
-NET "io_dip[22]" LOC = P58;
-NET "io_dip[22]" IOSTANDARD = LVTTL;
-NET "io_dip[22]" PULLDOWN;
-NET "io_dip[21]" LOC = P66;
-NET "io_dip[21]" IOSTANDARD = LVTTL;
-NET "io_dip[21]" PULLDOWN;
-NET "io_dip[20]" LOC = P67;
-NET "io_dip[20]" IOSTANDARD = LVTTL;
-NET "io_dip[20]" PULLDOWN;
-NET "io_dip[19]" LOC = P74;
-NET "io_dip[19]" IOSTANDARD = LVTTL;
-NET "io_dip[19]" PULLDOWN;
-NET "io_dip[18]" LOC = P75;
-NET "io_dip[18]" IOSTANDARD = LVTTL;
-NET "io_dip[18]" PULLDOWN;
-NET "io_dip[17]" LOC = P78;
-NET "io_dip[17]" IOSTANDARD = LVTTL;
-NET "io_dip[17]" PULLDOWN;
-NET "io_dip[16]" LOC = P79;
-NET "io_dip[16]" IOSTANDARD = LVTTL;
-NET "io_dip[16]" PULLDOWN;
+NET "io_dip<23>" LOC = P57 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<22>" LOC = P58 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<21>" LOC = P66 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<20>" LOC = P67 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<19>" LOC = P74 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<18>" LOC = P75 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<17>" LOC = P78 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<16>" LOC = P79 | IOSTANDARD = LVTTL | PULLDOWN;
 
-NET "io_dip[15]" LOC = P99;
-NET "io_dip[15]" IOSTANDARD = LVTTL;
-NET "io_dip[15]" PULLDOWN;
-NET "io_dip[14]" LOC = P100;
-NET "io_dip[14]" IOSTANDARD = LVTTL;
-NET "io_dip[14]" PULLDOWN;
-NET "io_dip[13]" LOC = P101;
-NET "io_dip[13]" IOSTANDARD = LVTTL;
-NET "io_dip[13]" PULLDOWN;
-NET "io_dip[12]" LOC = P102;
-NET "io_dip[12]" IOSTANDARD = LVTTL;
-NET "io_dip[12]" PULLDOWN;
-NET "io_dip[11]" LOC = P104;
-NET "io_dip[11]" IOSTANDARD = LVTTL;
-NET "io_dip[11]" PULLDOWN;
-NET "io_dip[10]" LOC = P105;
-NET "io_dip[10]" IOSTANDARD = LVTTL;
-NET "io_dip[10]" PULLDOWN;
-NET "io_dip[9]" LOC = P111;
-NET "io_dip[9]" IOSTANDARD = LVTTL;
-NET "io_dip[9]" PULLDOWN;
-NET "io_dip[8]" LOC = P112;
-NET "io_dip[8]" IOSTANDARD = LVTTL;
-NET "io_dip[8]" PULLDOWN;
+NET "io_dip<15>" LOC = P99 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<14>" LOC = P100 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<13>" LOC = P101 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<12>" LOC = P102 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<11>" LOC = P104 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<10>" LOC = P105 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<9>" LOC = P111 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<8>" LOC = P112 | IOSTANDARD = LVTTL | PULLDOWN;
 
-NET "io_dip[7]" LOC = P115;
-NET "io_dip[7]" IOSTANDARD = LVTTL;
-NET "io_dip[7]" PULLDOWN;
-NET "io_dip[6]" LOC = P114;
-NET "io_dip[6]" IOSTANDARD = LVTTL;
-NET "io_dip[6]" PULLDOWN;
-NET "io_dip[5]" LOC = P117;
-NET "io_dip[5]" IOSTANDARD = LVTTL;
-NET "io_dip[5]" PULLDOWN;
-NET "io_dip[4]" LOC = P116;
-NET "io_dip[4]" IOSTANDARD = LVTTL;
-NET "io_dip[4]" PULLDOWN;
-NET "io_dip[3]" LOC = P119;
-NET "io_dip[3]" IOSTANDARD = LVTTL;
-NET "io_dip[3]" PULLDOWN;
-NET "io_dip[2]" LOC = P118;
-NET "io_dip[2]" IOSTANDARD = LVTTL;
-NET "io_dip[2]" PULLDOWN;
-NET "io_dip[1]" LOC = P121;
-NET "io_dip[1]" IOSTANDARD = LVTTL;
-NET "io_dip[1]" PULLDOWN;
-NET "io_dip[0]" LOC = P120;
-NET "io_dip[0]" IOSTANDARD = LVTTL;
-NET "io_dip[0]" PULLDOWN;
+NET "io_dip<7>" LOC = P115 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<6>" LOC = P114 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<5>" LOC = P117 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<4>" LOC = P116 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<3>" LOC = P119 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<2>" LOC = P118 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<1>" LOC = P121 | IOSTANDARD = LVTTL | PULLDOWN;
+NET "io_dip<0>" LOC = P120 | IOSTANDARD = LVTTL | PULLDOWN;
